deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: goserver
 labels:
  app: goserver
spec:
 selector:
  matchLabels:
   app: goserver
 replicas: 1
 template:
  metadata:
    labels:
      app: "goserver"
  spec:
    containers:
      - name: goserver
        image: prgomesr/fc3-go-hello

        resources:
          requests:
            cpu: 100m
            memory: 20Mi
          limits:
            cpu: 500m
            memory: 25Mi

        startupProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 3
          failureThreshold: 10

        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 3
          failureThreshold: 1

        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          periodSeconds: 5
          failureThreshold: 1
          timeoutSeconds: 1
          successThreshold: 1
        volumeMounts:
          - mountPath: "/go/myfamily"
            name: config
          - mountPath: "/go/pvc"
            name: goserver-volume
            
    volumes:
      - name: goserver-volume
        persistentVolumeClaim:
          claimName: goserver-pvc
      - name: config
        configMap:
          name: configmap-family
          items:
          - key: members
            path: "family.txt"

#        env:
#          - name: NAME
#            valueFrom:
#             configMapKeyRef:
#              name: goserver-env
#              key: NAME

#          - name: AGE
#            valueFrom:
#             configMapKeyRef:
#              name: goserver-env
#              key: AGE
