pod.yml
apiVersion: v1
kind: Pod
metadata:
 name: "goserver"
 labels:
  app: "goserver"
spec:
 containers:
  - name: goserver
    image: prgomesr/fc3-go-hello
