service.yml
apiVersion: v1
kind: Service
metadata:
  name: goserver
spec:
  selector:
    app: goserver
  type: ClusterIP
  ports:
  - name: goserver-service
    port: 80
    targetPort: 80
    protocol: TCP
